<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/home_vp"
        style="@style/match"
        android:layout_weight="1"/>

    <View style="@style/hor_lin"
        android:background="@color/bg_BF"/>
    <RadioGroup
        android:id="@+id/home_nav"
        style="@style/match.wrap"
        android:background="@color/white"
        android:minHeight="@dimen/dp_40"
        android:orientation="horizontal"
        android:gravity="center">
        <RadioButton
            android:id="@+id/rb_home"
            style="@style/match"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:paddingTop="@dimen/dp_5"
            android:drawableTop="@drawable/bg_home_selector"
            android:gravity="center"
            android:text="@string/msg_title"
            android:textColor="@color/bg_main_buttom_select"
            android:textSize="@dimen/sp_12"/>
        <RadioButton
            android:id="@+id/rb_loginLog"
            style="@style/match"
            android:layout_weight="1"
            android:button="@null"
            android:paddingTop="@dimen/dp_5"
            android:drawableTop="@drawable/bg_loginlog_selector"
            android:gravity="center"
            android:text="@string/contact_title"
            android:textColor="@color/bg_main_buttom_select"
            android:textSize="@dimen/sp_12"/>
        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/match"
            android:layout_weight="1"
            android:button="@null"
            android:paddingTop="@dimen/dp_5"
            android:drawableTop="@drawable/bg_mine_selector"
            android:gravity="center"
            android:text="@string/mine_title"
            android:textColor="@color/bg_main_buttom_select"
            android:textSize="@dimen/sp_12"/>
    </RadioGroup>

</LinearLayout>