<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <include layout="@layout/base_top_toolbar"/>

    <ScrollView
        style="@style/match"
        android:layout_weight="1">
        <LinearLayout
            style="@style/match.ver_linear">
            <TextView
                android:id="@+id/head"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:gravity="center"
                tools:text="杨"
                tools:background="@drawable/bg_circle"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dp_50"/>

            <TextView
                style="@style/wrap"
                android:text="@string/mine_nick"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/bg_98"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"/>
            <TextView
                android:id="@+id/nickName"
                style="@style/wrap"
                tools:text="12dfsdesfdesfdfewsdfsddfsdsdffsfdsfsdfsfsfsfsfsfsfsfsdsfs32"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/bg_55"
                android:layout_marginTop="@dimen/dp_3"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"/>

            <TextView
                style="@style/wrap"
                android:text="@string/contact_id"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/bg_98"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"/>
            <TextView
                android:id="@+id/address"
                style="@style/wrap"
                tools:text="12dfsdesfdesfdfewsdf\n\n\nsddfsdsdffsfdsfsdfsfsfsfsfsfsfsfsdsfs32"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/bg_55"
                android:layout_marginTop="@dimen/dp_3"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"
                android:textIsSelectable="true"/>

            <TextView
                style="@style/wrap"
                android:text="@string/contact_remark"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/bg_98"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"/>
            <TextView
                android:id="@+id/remark"
                style="@style/wrap"
                tools:text="12dfsdesfdesfdfewsdf\n\n\nsddfsdsdffsfdsfsdfsfsfsfsfsfsfsfsdsfs32"
                android:textSize="@dimen/sp_15"
                android:textColor="@color/bg_55"
                android:layout_marginTop="@dimen/dp_3"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30"/>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/sendMsg"
        style="@style/match.wrap"
        android:gravity="center"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/sendMsg"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/bg_1484ED"
        android:background="@drawable/bg_login_btn"/>
</LinearLayout>